--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@cosmjs/tendermint-rpc": "^0.33.1",
     "axios": "^1.9.0",
     "bip39": "^3.1.0",
+    "long": "^5.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "vite-plugin-commonjs": "^0.10.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
