--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@cosmjs/tendermint-rpc": "^0.33.1",
     "axios": "^1.9.0",
     "bip39": "^3.1.0",
+    "esm": "^3.2.25",
     "long": "^5.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
